<resources>
    <string name="appname">CocoNest</string>
    <string name="welcome">WelCome</string>
    <string name="get_started">Get Started</string>
    <string name="Onboard1">Discover and Customize Gifts</string>
    <string name="Onboard1.1">Discover delightful chocolate gifts and customize them to make every moment sweeter.</string>
    <string name="Onboard2">Delivered with Care</string>
    <string name="Onboard2.1">Fast and secure delivery for every order</string>
    <string name="next">Next</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="textlogin">Don\'t have an account?</string>
    <string name="email">Email</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="fullname">Full Name</string>
    <string name="createacc">Create Account</string>
    <string name="phone">Phone</string>
    <string name="textsignup">Already have an account?</string>
    <string name="profile">My Profile</string>
    <string name="savePR">Save Profile</string>
    <string name="aboutus">About Us</string>
    <string name="aboutus.t">At CocoNest, we bring together everything you need to make gifting sweet and memorable. From premium chocolates to beautifully wrapped gift boxes, you’ll find it all in one place. Whether it’s a special celebration or a simple gesture of love, our carefully curated chocolates and elegant wrappings are designed to spread joy and delight</string>
    <string name="contactus">Contact Us</string>
    <string name="customize">Customize gifts</string>
    <string name="Backtohome">Back to Home</string>
    <string name="pc1">RS 360/-</string>
    <string name="pc2">RS 1600/-</string>
    <string name="pc3">RS 560/-</string>
    <string name="pc4">RS 780/-</string>
    <string name="pc5">RS 250/-</string>
    <string name="pc6">RS 360/-</string>
    <string name="pc7">RS 480/-</string>
    <string name="pc8">RS 900/-</string>
    <string name="it1">Kit Kat White</string>
    <string name="sz"> Size: Medium</string>
    <string name="check"> Proceed to Checkout</string>
    <string name="contus"> Contact Us</string>
    <string name="contusmail"> 📧 info@coconest.lk</string>
    <string name="contusphone">📞 070 799 5540</string>
    <string name="contusphone2">📞 070 253 2918</string>
    <string name="contusweb">🌐 www.coconest.lk</string>
    <string name="addtofav">Add to Favourites</string>
    <string name="stock">In Stock</string>
    <string name="description">Kit Kat White – smooth white chocolate with crispy wafer</string>
    <string name="addtocart">Add to Cart</string>
    <string name="wrapping1">Wrapping - Rs. 250/-</string>
    <string name="wrapping2">Wrapping - Rs. 200/-</string>
    <string name="wrapping3">Wrapping - Rs. 250/-</string>
    <string name="wrapping4">Wrapping - Rs. 230/-</string>
    <string name="box1">Gift Box1 - Rs. 680/-</string>
    <string name="box2">Gift Box2 - Rs. 450/-</string>
    <string name="box3">Gift Box3 - Rs. 600/-</string>
    <string name="box4">Gift Box4 - Rs. 550/-</string>
    <string name="uploadslip">Upload Bank Slip</string>
    <string name="choose">Choose Bank Slip</string>
    <string name="submit">Submit Payment</string>
    <string name="thpayment">Thank You for Your Payment!</string>


    <string-array name="cart_categories">
        <item>Chocolates</item>
        <item>Packaging Materials</item>
    </string-array>
    <string name="app_name">CocoNest</string>


</resources>