<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="24dp">

    <!-- Panel (50% transparent, rounded) -->

    <LinearLayout
        android:id="@+id/signupBox"
        android:layout_width="288dp"
        android:layout_height="414dp"
        android:background="@drawable/bg_login_panel"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81">

        <!-- Full Name -->
        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@android:drawable/edit_text"
            android:fontFamily="@font/voltaire_regular"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:padding="12dp" />

        <!-- Email -->
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@android:drawable/edit_text"
            android:fontFamily="@font/voltaire_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <!-- Password -->
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@android:drawable/edit_text"
            android:fontFamily="@font/voltaire_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp" />

        <!-- Confirm Password -->
        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/edit_text"
            android:fontFamily="@font/voltaire_regular"
            android:hint="@string/confirmpw"
            android:inputType="textPassword"
            android:padding="12dp" />

        <!-- Sign Up button -->
        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:backgroundTint="@color/dark_chocolate"
            android:fontFamily="@font/voltaire_regular"
            android:text="@string/createacc"
            android:textColor="@color/cream"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Already have an account? Log in -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:fontFamily="@font/voltaire_regular"
                android:text="@string/textsignup"
                android:textColor="@color/dark_chocolate"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnGoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/voltaire_regular"
                android:text="@string/login"
                android:textColor="@color/dark_chocolate"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="393dp"
        android:layout_height="315dp"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
