<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".ProfileActivity">


    <LinearLayout
        android:id="@+id/signupBox"
        android:layout_width="290dp"
        android:layout_height="429dp"
        android:background="@drawable/bg_login_panel"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569">

        <!-- Title -->
        <TextView
            android:id="@+id/tvProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/spicy_rice_regular"
            android:paddingBottom="16dp"
            android:text="@string/profile"
            android:textColor="@color/dark_chocolate"
            android:textSize="28sp" />

        <!-- Name -->
        <EditText
            android:id="@+id/etProfileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/cream"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:drawableTint="@color/primaryBrown"
            android:hint="@string/fullname"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColor="@color/dark_chocolate"
            android:textColorHint="@color/dark_chocolate" />

        <!-- Email -->
        <EditText
            android:id="@+id/etProfileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/cream"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:drawableTint="#836C69"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/dark_chocolate"
            android:textColorHint="@color/dark_chocolate" />

        <!-- Phone -->
        <EditText
            android:id="@+id/etProfilephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/cream"
            android:drawableStart="@android:drawable/ic_menu_call"
            android:drawableTint="@color/primaryBrown"
            android:hint="@string/phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/dark_chocolate"
            android:textColorHint="@color/dark_chocolate" />

        <!-- Address -->
        <EditText
            android:id="@+id/etProfilepw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/cream"
            android:drawableStart="@android:drawable/ic_menu_mylocation"
            android:drawableTint="@color/primaryBrown"
            android:hint="@string/password"
            android:inputType="textPostalAddress"
            android:padding="10dp"
            android:textColor="@color/dark_chocolate"
            android:textColorHint="@color/dark_chocolate" />

        <!-- Save Button -->
        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_chocolate"
            android:fontFamily="@font/spicy_rice_regular"
            android:padding="12dp"
            android:text="@string/savePR"
            android:textColor="@color/cream"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="307dp"
        android:layout_height="189dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/signupBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />

    <include
        android:id="@+id/footerBar"
        layout="@layout/footer_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
