<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".LoginActivity">

    <!-- Transparent Rectangle (Container) -->

    <LinearLayout
        android:id="@+id/signupBox"
        android:layout_width="285dp"
        android:layout_height="342dp"
        android:background="@drawable/bg_login_panel"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.76">

        <!-- Username Field -->

        <!-- Password Field -->
        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/edit_text"
            android:fontFamily="@font/voltaire_regular"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="@color/material_dynamic_neutral_variant0" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@android:drawable/edit_text"
            android:fontFamily="@font/voltaire_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="@color/material_dynamic_neutral10" />

        <!-- Login Button -->
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/dark_chocolate"
            android:fontFamily="@font/voltaire_regular"
            android:text="@string/login"
            android:textColor="@color/cream"
            android:textSize="18sp" />

        <!-- "Don't have an account?" + Sign Up -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:fontFamily="@font/voltaire_regular"
                android:text="@string/textlogin"
                android:textColor="@color/dark_chocolate"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/dark_chocolate"
                android:fontFamily="@font/voltaire_regular"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/signup"
                android:textColor="@color/cream"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="363dp"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>
